andrewringler-wp-theme/style.css
/* ... */
[class*="navigation"] .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

/* =Comments
----------------------------------------------- */

.comment-content a {
	word-wrap: break-word;
}
.bypostauthor {
}

/* =Widgets
----------------------------------------------- */
.title, .author, .entry-date {
  font-weight: 600;
  color: #444;
}

.widget {
	margin: 0 0 1.5em;
}

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

/* Search widget */
.widget_search .submit {
	display: none;
}

/* =Infinite Scroll
----------------------------------------------- */

/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .navigation-paging, /* Older / Newer Posts Navigation (always hidden) */
.infinite-scroll.neverending .site-footer { /* Theme Footer (when set to scrolling) */
	display: none;
}

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
.infinity-end.neverending .site-footer {
	display: block;
}



/* =Helper Classes
----------------------------------------------- */
.visually-hidden {
	display: none;
}



/* =Font Loading
----------------------------------------------- */
.wf-loading h1, 
.wf-loading h2, 
.wf-loading h3, 
.wf-loading p, 
.wf-loading li, 
.wf-loading span,
.wf-loading time {
	opacity: 0;
}
h1, h2, h3, p, li, span, time {
	opacity: 1;
	-webkit-transition: opacity 0.15s ease-in-out;
	-moz-transition: opacity 0.15s ease-in-out;
	-ms-transition: opacity 0.15s ease-in-out;
	-o-transition: opacity 0.15s ease-in-out;
	transition: opacity 0.15s ease-in-out;
}




/* =Responsive Breakpoints
 * not mobile-first
----------------------------------------------- */
@media only screen and (max-device-width: 900px) {
	#content {
	  max-width: 95%;
	}	
	body.home {
	    margin-top: 0.5em;
	}
	
	body.home #profile-header {
	  	min-height: inherit;
		padding-left: 0;
		margin: 0;
	}
	body.home #profile-header .description {
		display: block;
		max-width: 95%;
	}
	
	#profile-header-image {
	  max-width: 75%;
	  position: inherit;
	}	
	#profile-header h1 {
		font-size: 1em;
	}
	#profile-header p {
		font-size: 1em;
		max-width: 100%;
	}
}

